// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Summary View renders approved correctly 1`] = `
.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 {
  text-align: center;
  margin-bottom: 1rem;
}

.c1 {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: 'BCSans',Fallback,sans-serif;
}

.c2 {
  padding-left: 10px;
}

.c2 small {
  padding-top: 20px;
  vertical-align: middle;
}

<div
  className="ProjectSummaryView container-fluid"
>
  <div
    className="c0 [object Object]-status"
  >
    <h5
      className="c1"
    >
      Approved for Surplus Property Program
    </h5>
    <svg
      fill="currentColor"
      height={64}
      size={64}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#20a74d",
        }
      }
      viewBox="0 0 512 512"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
      />
    </svg>
    <h5
      className="c1"
    >
      Approval Date: Unknown Date
    </h5>
  </div>
  <form
    className=""
  >
    <div
      className="ProjectDraftForm container-fluid"
    >
      <div
        className="form-row"
      >
        <h3
          className="col-md-8"
        >
          Review
        </h3>
        <span
          className="col-md-4"
        />
      </div>
      <div
        className="col-md-10 form-row"
      >
        <label
          className="col-md-2 form-label"
        >
          Project No.
        </label>
        <div
          className="col-md-2 form-group"
        >
          <input
            className="form-control"
            disabled={true}
            id="input-projectNumber"
            name="projectNumber"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            placeholder="SPP-XXXXXX"
            value="test-01"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="required col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-name"
          >
            Name
          </label>
          <input
            className="col-md-5 form-control"
            data-testid="project-name"
            disabled={true}
            id="input-name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            value="my project"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-description"
          >
            Description
          </label>
          <textarea
            className="col-md-auto form-control"
            data-testid="project-description"
            disabled={true}
            id="input-description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            value="my project description"
          />
        </div>
      </div>
    </div>
    <div
      className="UpdateInfoForm container-fluid"
    >
      <div
        className="form-row"
      >
        <label
          className="form-label col-form-label col-md-2"
        >
          Assign Tier
        </label>
        <div
          className="required col-md-1 form-group"
        >
          <select
            className="form-select form-control"
            disabled={true}
            id="input-tierLevelId"
            name="tierLevelId"
            onBlur={[Function]}
            onChange={[Function]}
            required={true}
            value={1}
          >
            <option
              value=""
            >
              Must Select One
            </option>
          </select>
        </div>
        <div
          className="c2"
        >
          <small>
            Tier 1: Properties with a net value less than $1M.
          </small>
        </div>
      </div>
      <div
        className="form-row"
        style={
          Object {
            "alignItems": "unset",
          }
        }
      >
        <h3
          className="col-md-8"
        >
          Financial Information
        </h3>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "0 0 1rem 0",
            }
          }
        >
          These values are for the 
          <strong>
            project
          </strong>
          , not the individual properties.
        </h6>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Assessed Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="assessed"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Net Book Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="netBook"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Market Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="market"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Appraised Value
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="appraised"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Sales Costs
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="salesCost"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Program Recovery Fees
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="programCost"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          Please update  the property classification.
        </h6>
        <h2
          className="col-md-5"
        >
          Properties in the Project
        </h2>
      </div>
      <div
        className="container-fluid"
      >
        <div
          className="ScrollContainer"
        >
          <div
            className="table"
            role="table"
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            <div
              className="thead thead-light"
            >
              <div
                className="tr"
                role="row"
                style={
                  Object {
                    "display": "flex",
                    "flex": "1 0 auto",
                    "minWidth": "790px",
                  }
                }
              >
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Agency
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Name
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Civic Address
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "140 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "140px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Classification
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Current Zoning Code
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Other Projects
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Net Book Value
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Market Value
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Assessed Land
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Assessed Building
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "60 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "60px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Type
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="no-rows-message"
            >
              No rows to display
            </div>
          </div>
          <div
            className="table-toolbar"
          />
        </div>
      </div>
    </div>
    <h3>
      Documentation
    </h3>
    <h3>
      Enhanced Referral Process Exemption
      <svg
        className="tooltip-icon"
        fill="currentColor"
        height="1em"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </h3>
    <div
      className="ProjectExemptionRequestCheck form-row"
    >
      <div
        className="form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={false}
              className="form-check-input position-static"
              disabled={true}
              id="input-exemptionRequested"
              name="exemptionRequested"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <label
            className="text-wrap form-label"
            htmlFor="input-exemptionRequested"
          >
            Apply for Enhanced Referral Process exemption
          </label>
        </div>
      </div>
    </div>
    <h3>
      Approval
    </h3>
    <div
      className="form-row"
    >
      <div
        className="required form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={true}
              className="form-check-input position-static"
              disabled={true}
              id="input-confirmation"
              name="confirmation"
              onBlur={[Function]}
              onChange={[Function]}
              required={true}
              type="checkbox"
              value={true}
            />
          </div>
          <label
            className="form-label"
            htmlFor="input-confirmation"
          >
            My Ministry/Agency has approval/authority to submit the Disposal Project to SRES for review.
          </label>
        </div>
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group col"
      >
        <label
          className="form-label"
          htmlFor="input-note"
        >
          Notes
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-note"
          name="note"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          value="my notes"
        />
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group col"
      >
        <label
          className="form-label"
          htmlFor="input-publicNote"
        >
          Shared Notes
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height="1em"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-publicNote"
          name="publicNote"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <div
      className="c3"
    >
      <button
        className="btn btn-primary"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 10,
          }
        }
        type="button"
      >
        Submit
      </button>
      <button
        className="btn btn-secondary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`Review Summary View renders denied correctly 1`] = `
.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 {
  text-align: center;
  margin-bottom: 1rem;
}

.c1 {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: 'BCSans',Fallback,sans-serif;
}

.c2 {
  padding-left: 10px;
}

.c2 small {
  padding-top: 20px;
  vertical-align: middle;
}

<div
  className="ProjectSummaryView container-fluid"
>
  <div
    className="c0 [object Object]-status"
  >
    <h5
      className="c1"
    >
      Submitted
    </h5>
    <svg
      fill="currentColor"
      height={64}
      size={64}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#d8292f",
        }
      }
      viewBox="0 0 24 24"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
    <h5
      className="c1"
    >
      test
    </h5>
  </div>
  <form
    className=""
  >
    <div
      className="ProjectDraftForm container-fluid"
    >
      <div
        className="form-row"
      >
        <h3
          className="col-md-8"
        >
          Review
        </h3>
        <span
          className="col-md-4"
        />
      </div>
      <div
        className="col-md-10 form-row"
      >
        <label
          className="col-md-2 form-label"
        >
          Project No.
        </label>
        <div
          className="col-md-2 form-group"
        >
          <input
            className="form-control"
            disabled={true}
            id="input-projectNumber"
            name="projectNumber"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            placeholder="SPP-XXXXXX"
            value="test-01"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="required col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-name"
          >
            Name
          </label>
          <input
            className="col-md-5 form-control"
            data-testid="project-name"
            disabled={true}
            id="input-name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            value="my project"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-description"
          >
            Description
          </label>
          <textarea
            className="col-md-auto form-control"
            data-testid="project-description"
            disabled={true}
            id="input-description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            value="my project description"
          />
        </div>
      </div>
    </div>
    <div
      className="UpdateInfoForm container-fluid"
    >
      <div
        className="form-row"
      >
        <label
          className="form-label col-form-label col-md-2"
        >
          Assign Tier
        </label>
        <div
          className="required col-md-1 form-group"
        >
          <select
            className="form-select form-control"
            disabled={true}
            id="input-tierLevelId"
            name="tierLevelId"
            onBlur={[Function]}
            onChange={[Function]}
            required={true}
            value={1}
          >
            <option
              value=""
            >
              Must Select One
            </option>
          </select>
        </div>
        <div
          className="c2"
        >
          <small>
            Tier 1: Properties with a net value less than $1M.
          </small>
        </div>
      </div>
      <div
        className="form-row"
        style={
          Object {
            "alignItems": "unset",
          }
        }
      >
        <h3
          className="col-md-8"
        >
          Financial Information
        </h3>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "0 0 1rem 0",
            }
          }
        >
          These values are for the 
          <strong>
            project
          </strong>
          , not the individual properties.
        </h6>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Assessed Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="assessed"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Net Book Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="netBook"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Market Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="market"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Appraised Value
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="appraised"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Sales Costs
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="salesCost"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Program Recovery Fees
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="programCost"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          Please update  the property classification.
        </h6>
        <h2
          className="col-md-5"
        >
          Properties in the Project
        </h2>
      </div>
      <div
        className="container-fluid"
      >
        <div
          className="ScrollContainer"
        >
          <div
            className="table"
            role="table"
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            <div
              className="thead thead-light"
            >
              <div
                className="tr"
                role="row"
                style={
                  Object {
                    "display": "flex",
                    "flex": "1 0 auto",
                    "minWidth": "790px",
                  }
                }
              >
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Agency
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Name
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Civic Address
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "140 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "140px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Classification
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Current Zoning Code
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Other Projects
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Net Book Value
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Market Value
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Assessed Land
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Assessed Building
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "60 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "60px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Type
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="no-rows-message"
            >
              No rows to display
            </div>
          </div>
          <div
            className="table-toolbar"
          />
        </div>
      </div>
    </div>
    <h3>
      Documentation
    </h3>
    <h3>
      Enhanced Referral Process Exemption
      <svg
        className="tooltip-icon"
        fill="currentColor"
        height="1em"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </h3>
    <div
      className="ProjectExemptionRequestCheck form-row"
    >
      <div
        className="form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={false}
              className="form-check-input position-static"
              disabled={true}
              id="input-exemptionRequested"
              name="exemptionRequested"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <label
            className="text-wrap form-label"
            htmlFor="input-exemptionRequested"
          >
            Apply for Enhanced Referral Process exemption
          </label>
        </div>
      </div>
    </div>
    <h3>
      Approval
    </h3>
    <div
      className="form-row"
    >
      <div
        className="required form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={true}
              className="form-check-input position-static"
              disabled={true}
              id="input-confirmation"
              name="confirmation"
              onBlur={[Function]}
              onChange={[Function]}
              required={true}
              type="checkbox"
              value={true}
            />
          </div>
          <label
            className="form-label"
            htmlFor="input-confirmation"
          >
            My Ministry/Agency has approval/authority to submit the Disposal Project to SRES for review.
          </label>
        </div>
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group col"
      >
        <label
          className="form-label"
          htmlFor="input-note"
        >
          Notes
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-note"
          name="note"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          value="my notes"
        />
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group col"
      >
        <label
          className="form-label"
          htmlFor="input-publicNote"
        >
          Shared Notes
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height="1em"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-publicNote"
          name="publicNote"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <div
      className="c3"
    >
      <button
        className="btn btn-primary"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 10,
          }
        }
        type="button"
      >
        Submit
      </button>
      <button
        className="btn btn-secondary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`Review Summary View renders submitted correctly 1`] = `
.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 {
  text-align: center;
  margin-bottom: 1rem;
}

.c1 {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: 'BCSans',Fallback,sans-serif;
}

.c2 {
  padding-left: 10px;
}

.c2 small {
  padding-top: 20px;
  vertical-align: middle;
}

<div
  className="ProjectSummaryView container-fluid"
>
  <div
    className="c0 [object Object]-status"
  >
    <h5
      className="c1"
    >
      Submitted
    </h5>
    <svg
      fill="currentColor"
      height={64}
      size={64}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#2E8540",
        }
      }
      viewBox="0 0 512 512"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
      />
    </svg>
    <h5
      className="c1"
    >
      In Review
    </h5>
  </div>
  <form
    className=""
  >
    <div
      className="ProjectDraftForm container-fluid"
    >
      <div
        className="form-row"
      >
        <h3
          className="col-md-8"
        >
          Review
        </h3>
        <span
          className="col-md-4"
        />
      </div>
      <div
        className="col-md-10 form-row"
      >
        <label
          className="col-md-2 form-label"
        >
          Project No.
        </label>
        <div
          className="col-md-2 form-group"
        >
          <input
            className="form-control"
            disabled={true}
            id="input-projectNumber"
            name="projectNumber"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            placeholder="SPP-XXXXXX"
            value="test-01"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="required col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-name"
          >
            Name
          </label>
          <input
            className="col-md-5 form-control"
            data-testid="project-name"
            disabled={true}
            id="input-name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            value="my project"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-description"
          >
            Description
          </label>
          <textarea
            className="col-md-auto form-control"
            data-testid="project-description"
            disabled={true}
            id="input-description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            value="my project description"
          />
        </div>
      </div>
    </div>
    <div
      className="UpdateInfoForm container-fluid"
    >
      <div
        className="form-row"
      >
        <label
          className="form-label col-form-label col-md-2"
        >
          Assign Tier
        </label>
        <div
          className="required col-md-1 form-group"
        >
          <select
            className="form-select form-control"
            disabled={true}
            id="input-tierLevelId"
            name="tierLevelId"
            onBlur={[Function]}
            onChange={[Function]}
            required={true}
            value={1}
          >
            <option
              value=""
            >
              Must Select One
            </option>
          </select>
        </div>
        <div
          className="c2"
        >
          <small>
            Tier 1: Properties with a net value less than $1M.
          </small>
        </div>
      </div>
      <div
        className="form-row"
        style={
          Object {
            "alignItems": "unset",
          }
        }
      >
        <h3
          className="col-md-8"
        >
          Financial Information
        </h3>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "0 0 1rem 0",
            }
          }
        >
          These values are for the 
          <strong>
            project
          </strong>
          , not the individual properties.
        </h6>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Assessed Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="assessed"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Net Book Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="netBook"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Market Value
            </label>
            <div
              className="required form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="market"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  required={true}
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Appraised Value
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="appraised"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Sales Costs
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="salesCost"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="form-row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Program Recovery Fees
            </label>
            <div
              className="form-group col-md-6"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control input-number"
                  disabled={true}
                  name="programCost"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder=""
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          Please update  the property classification.
        </h6>
        <h2
          className="col-md-5"
        >
          Properties in the Project
        </h2>
      </div>
      <div
        className="container-fluid"
      >
        <div
          className="ScrollContainer"
        >
          <div
            className="table"
            role="table"
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            <div
              className="thead thead-light"
            >
              <div
                className="tr"
                role="row"
                style={
                  Object {
                    "display": "flex",
                    "flex": "1 0 auto",
                    "minWidth": "790px",
                  }
                }
              >
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Agency
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Name
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Civic Address
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "140 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "140px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Classification
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Current Zoning Code
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Other Projects
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Net Book Value
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Market Value
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Assessed Land
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Assessed Building
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  className="th"
                  colSpan={1}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "60 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "60px",
                    }
                  }
                >
                  <div
                    className="sortable-column"
                  >
                    Type
                    <span
                      style={
                        Object {
                          "flex": "1 1 auto",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="no-rows-message"
            >
              No rows to display
            </div>
          </div>
          <div
            className="table-toolbar"
          />
        </div>
      </div>
    </div>
    <h3>
      Documentation
    </h3>
    <h3>
      Enhanced Referral Process Exemption
      <svg
        className="tooltip-icon"
        fill="currentColor"
        height="1em"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        />
      </svg>
    </h3>
    <div
      className="ProjectExemptionRequestCheck form-row"
    >
      <div
        className="form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={false}
              className="form-check-input position-static"
              disabled={true}
              id="input-exemptionRequested"
              name="exemptionRequested"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <label
            className="text-wrap form-label"
            htmlFor="input-exemptionRequested"
          >
            Apply for Enhanced Referral Process exemption
          </label>
        </div>
      </div>
    </div>
    <h3>
      Approval
    </h3>
    <div
      className="form-row"
    >
      <div
        className="required form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={true}
              className="form-check-input position-static"
              disabled={true}
              id="input-confirmation"
              name="confirmation"
              onBlur={[Function]}
              onChange={[Function]}
              required={true}
              type="checkbox"
              value={true}
            />
          </div>
          <label
            className="form-label"
            htmlFor="input-confirmation"
          >
            My Ministry/Agency has approval/authority to submit the Disposal Project to SRES for review.
          </label>
        </div>
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group col"
      >
        <label
          className="form-label"
          htmlFor="input-note"
        >
          Notes
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-note"
          name="note"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          value="my notes"
        />
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group col"
      >
        <label
          className="form-label"
          htmlFor="input-publicNote"
        >
          Shared Notes
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height="1em"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-publicNote"
          name="publicNote"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <div
      className="c3"
    >
      <button
        className="btn btn-primary"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 10,
          }
        }
        type="button"
      >
        Submit
      </button>
      <button
        className="btn btn-secondary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;
